--- a/mole/package.json
+++ b/mole/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "passport-42": "^1.2.6"
   }
 }
