--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "client-oauth2": "^4.3.3",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "css-variables-parser": "^1.0.1",
     "curl": "^0.1.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
